--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 
 <head>
     <title>The Cloud Engineers Collective</title>
+    <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
     <article>
         <section>
-            <h1>About the us</h1>
+            <h1>About Us</h1>
             <p>The Cloud Engineers Collective is a not for profit organisation, governed by members for it's members.
                 Members are vetted to ensure that they are reputuble and professional cloud engineers who have a proven
                 track history of delivering Cloud Native solutions to their clients.</p>
@@ -17,7 +18,7 @@
                 vain to the agile manefesto.</p>
         </section>
         <section>
-            <h1>Would you like to join us?</h1>
+            <h1>Join Us?</h1>
             <p>If you know an existing member then the please talk to them about being proposed as a member because it's
                 less cumbersom.</p>
             <p>If you don't know any existing members and would like to join us, please open a pull request!</p>
