a little more style and content amendments

--- a/principles.html
+++ b/principles.html
@@ -2,7 +2,7 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>The Cloud Engineers Collective</title>
+    <title>CEC Principles</title>
     <link rel="stylesheet" href="style.css" />
 </head>
 
@@ -31,4 +31,5 @@
                 less cumbersom.</p>
             <p>If you don't know any existing members and would like to join us, please open a pull request!</p>
         </section>
+    </article>
 </body>
