--- a/principles.html
+++ b/principles.html
@@ -3,33 +3,39 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>CEC Principles</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fira+Sans">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fira+Sans+Condensed">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fira+Sans+Extra+Condensed">
     <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
-    <h1>Cloud Engineers Collective</h1>
+    <h1>CEC Principles</h1>
     <article>
         <section>
-            <h1>About Us</h1>
-            <p>The CEC is a not for profit organisation, governed by members for it's members.</p>
-            <p>Members are vetted to ensure that they are reputuble and professional cloud engineers with a proven track
-                history of delivering Cloud Native solutions to their clients.</p>
+            <h1>Professional Integrity</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam mollitia aspernatur nemo, voluptatum ad
+                natus. Mollitia sit quo facilis ea obcaecati distinctio reiciendis maiores nihil aspernatur, quas autem
+                numquam asperiores!</p>
         </section>
         <section>
-            <h1>What we do</h1>
-            <p>Our community provide a network of support, sharing our skills, knowledge and experiences for the benefit
-                of our members and other audiences.</p>
+            <h1>Respect for work</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            <p>Quam mollitia aspernatur nemo, voluptatum ad natus. Mollitia sit quo facilis ea obcaecati distinctio
+                reiciendis maiores nihil aspernatur, quas autem numquam asperiores!</p>
         </section>
         <section>
-            <h1>How we work</h1>
-            <p>We are governed by a set of principles, which all members have agreed to adhear to. You can think of them
-                in a similar vain to the agile manefesto and code of conduct.</p>
+            <h1>Something else</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam mollitia aspernatur nemo, voluptatum ad
+                natus. Mollitia sit quo facilis ea obcaecati distinctio reiciendis maiores nihil aspernatur, quas autem
+                numquam asperiores!</p>
         </section>
         <section>
             <h1>Join Us?</h1>
-            <p>If you know an existing member then the please talk to them about being proposed as a member because it's
-                less cumbersom.</p>
-            <p>If you don't know any existing members and would like to join us, please open a pull request!</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam mollitia aspernatur nemo, voluptatum ad
+                natus.</p>
+            <p> Mollitia sit quo facilis ea obcaecati distinctio reiciendis maiores nihil aspernatur, quas autem numquam
+                asperiores!</p>
         </section>
     </article>
 </body>
