resize image and change font styles

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fira+Sans">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fira+Sans+Condensed">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fira+Sans+Extra+Condensed">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Merriweather">
     <link rel="stylesheet" href="style.css" />
 </head>
 
@@ -29,7 +30,7 @@
                 in a similar vain to the agile manefesto and code of conduct.</p>
         </section>
         <section>
-            <h1>Join Us?</h1>
+            <h1>Join Us</h1>
             <p>If you know an existing member then the please talk to them about being proposed as a member because it's
                 less cumbersom.</p>
             <p>If you don't know any existing members and would like to join us, please open a pull request!</p>
