--- a/principles.html
+++ b/principles.html
@@ -16,8 +16,8 @@
         <section>
             <h1>Professional Integrity</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam mollitia aspernatur nemo, voluptatum ad
-                natus. Mollitia sit quo facilis ea obcaecati distinctio reiciendis maiores nihil aspernatur, quas autem
-                numquam asperiores!</p>
+                natus. Mollitia David Christe bhive, org,uksit quo facilis ea obcaecati distinctio reiciendis maiores
+                nihil aspernatur, quas autem numquam asperiores!</p>
         </section>
         <section>
             <h1>Respect for work</h1>
